Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (June 20, 2003)
  Fix a core dump with empty Date:.

 Jose Kahan (Jun 10, 2003)
  - Some extra WAI enhancements requested during the period of public comments:
    Order the date index by dates, like in subjects, add <dfn> to the start and
    end period in the indexes, change the title of "jump to first message" to
    "jump to list of messages".
  - The top respond link didn't take into account the msgid or subject. It was just
    a plain mailto. Made it work as the bottom one.

 Jose Kahan (Jun 10, 2003)
  - Adding new messages using the -u option to an existing file sometimes resulted
    in warnings saying "Message-ID is missing, ignoring message with subject..."
    Patch idea submitted by Peter.

 Jose Kahan (Jun 10, 2003)
  - The incremental option (-u) always started new archives with 0001, rather
    than 0000. It will now start with 0000 as before
    For those people who had this problem and don't want to break any links to their
    archives when rebuilding them, there's a new configuration option allowing you
    to tell from which number you want to start your archive: startmsgnum. You should
    only set it up once and not modify it for an existing archive or your links may 
    break.
    A warning message appeared systematically because the showhr, which is now deprecated,
    was turned on by default.

 Peter McCluskey (May 22, 2003)
  - add Italian support from Gabriele Bartolini and Marco Nenciarini.

 Peter McCluskey (May 16, 2003)
  - Fixed initialization of prior_subdir when dirs created out of
   order. That fixes a case where a subdir wasn't in index files with
   reverse_folders = 1.

 Jose Kahan (May 13, 2003)
   - Add the WAI enhancements proposed in 
     http://www.w3.org/2002/03/archives-improvements/. 
     As a consequence of this change, the sethr and usetable configuration
     options are deprecated. The new markup takes into account the changes