@@ -1,6 +1,10 @@
 Version Changes for Hypermail
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ Peter McCluskey (June 24, 2003)
+  Fix print_index_header_links to print MSG_ENDING date correctly (had
+ been using 2 getdatestr() calls in one argument list).
+
  Peter McCluskey (June 20, 2003)
   Fix a core dump with empty Date:.
 
